--- a/package.json
+++ b/package.json
@@ -10,17 +10,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.11",
+    "@angular/animations": "^18.0.0",
     "@angular/cdk": "^18.0.5",
-    "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
+    "@angular/common": "^18.0.0",
+    "@angular/compiler": "^18.0.0",
+    "@angular/core": "^18.0.0",
     "@angular/fire": "^18.0.1",
-    "@angular/forms": "^17.0.0",
-    "@angular/platform-browser": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0",
-    "@angular/router": "^17.0.0",
-    "@nguniversal/express-engine": "^7.0.2",
+    "@angular/forms": "^18.0.0",
+    "@angular/platform-browser": "^18.0.0",
+    "@angular/platform-browser-dynamic": "^18.0.0",
+    "@angular/router": "^18.0.0",
     "guid-typescript": "^1.0.9",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
@@ -31,16 +30,16 @@
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.7",
-    "@angular/cli": "^17.0.7",
-    "@angular/compiler-cli": "^17.0.0",
-    "@types/jasmine": "~5.1.0",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.2.2"
-  }
+  "typescript": "~5.4.0",
+  "@angular-devkit/build-angular": "^18.0.0",
+  "@angular/cli": "^18.0.0",
+  "@angular/compiler-cli": "^18.0.0",
+  "@types/jasmine": "~5.1.0",
+  "jasmine-core": "~5.1.0",
+  "karma": "~6.4.0",
+  "karma-chrome-launcher": "~3.2.0",
+  "karma-coverage": "~2.2.0",
+  "karma-jasmine": "~5.1.0",
+  "karma-jasmine-html-reporter": "~2.1.0"
+}
 }
